babel server setup

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
@@ -14,13 +17,14 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "node src/server/server.js",
+    "start": "npm run build-server && node dist/server.js",
     "build": "react-scripts build",
+    "build-server": "babel src/server -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
     "start-dev-react": "react-scripts start",
-    "start-dev-server": "nodemon --inspect=9230 src/server/server.js"
+    "start-dev-server": "babel --watch src/server -d dist & nodemon --inspect=9230 dist/server.js"
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
