--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.22",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "react": "^16.8.6",
