--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
     "start-dev-react": "react-scripts start",
-    "start-dev-server": "babel --watch src/server -d dist & nodemon --inspect=9230 dist/server.js"
+    "start-dev-server": "babel --watch src/server -d dist & (sleep 5 && nodemon --inspect=9230 dist/server.js)"
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
