--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.0",
     "node-sass": "^4.11.0",
@@ -22,11 +23,12 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
     "secure-random": "^1.1.1"
