--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.0",
     "mongoose": "^5.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.11",
@@ -35,12 +36,12 @@
     "secure-random": "^1.1.1"
   },
   "scripts": {
-    "start": "npm run build-server && node dist/server.js",
+    "start": "npm run build && npm run build-server && npm run build-shared && node dist/server.js",
     "build": "react-scripts build",
     "build-server": "babel src/server -d dist",
+    "build-shared": "babel src/shared -d dist/shared",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build",
     "start-dev-react": "react-scripts start",
     "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js"
   },
