--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "husky": "^1.3.1",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
-    "module-alias": "^2.2.0",
     "mongoose": "^5.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.11",
@@ -57,5 +57,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "rm -r ./packages/toronto-utils/lib/ && npm run build-utils"
+    }
+  }
 }
