--- a/packages/toronto-utils/package.json
+++ b/packages/toronto-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toronto-utils",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "main": "lib/utils.js",
   "directories": {
@@ -16,10 +16,15 @@
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "babel-jest": "^24.7.1",
     "dotenv": "^7.0.0",
     "secure-random": "^1.1.1"
   },
   "scripts": {
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^24.7.1"
   }
 }
