--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "husky": "^1.3.1",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.11",
@@ -45,7 +46,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
-    "start-dev-react": "react-scripts start",
+    "start-dev-react": "npm run update-utils && react-scripts start",
     "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js"
   },
   "proxy": "http://localhost:5000/",
