--- a/package.json
+++ b/package.json
@@ -3,39 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "axios": "^0.19.0",
-    "bcrypt": "^3.0.5",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "husky": "^1.3.1",
-    "jquery": "^3.4.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "husky": "^2.4.1",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.5.0",
+    "mongoose": "^5.6.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.18.11",
+    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
-    "react-cookie": "^3.1.2",
+    "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0-alpha.4",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
-    "redux-starter-kit": "^0.4.3",
-    "secure-random": "^1.1.1",
+    "redux-starter-kit": "^0.5.1",
+    "secure-random": "^1.1.2",
     "toronto-utils": "./packages/toronto-utils"
+  },
+  "devDependencies": {
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "npm run build-server && node dist/server.js",
