--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/node": "^7.4.5",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@tippy.js/react": "^2.2.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.5",
     "cookie-parser": "^1.4.4",
@@ -23,11 +24,9 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
-    "react-popper": "^1.3.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
