--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "@babel/node": "^7.4.5",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@tippy.js/react": "^2.2.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.5",
-    "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "husky": "^2.4.1",
-    "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.6.0",
@@ -25,7 +24,6 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
@@ -38,18 +36,23 @@
     "toronto-utils": "./packages/toronto-utils"
   },
   "devDependencies": {
+    "autoprefixer": "^9.6.0",
+    "postcss-cli": "^6.1.2",
+    "tailwindcss": "^1.0.4",
     "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "npm run build-server && node dist/server.js",
-    "build": "react-scripts build",
+    "build": "npm run build:css && react-scripts build",
     "build-server": "babel src/server -d dist",
     "build-utils": "cd packages/toronto-utils && npm run build",
     "update-utils": "npm run build-utils && yarn upgrade ./packages/toronto-utils",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
-    "start-dev-react": "npm run update-utils && react-scripts start",
+    "build:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css",
+    "watch:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css -w",
+    "start-dev-react": "npm run update-utils && (npm run watch:css & react-scripts start)",
     "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js"
   },
   "proxy": "http://localhost:5000/",
