--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "^3.0.0",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.5.1",
+    "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.1",
     "toronto-utils": "./packages/toronto-utils"
   },
