--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,7 @@
 {
-    "compilerOptions": {
-        "target": "ES6"
-    },
-    "exclude": [
-        "node_modules",
-        "**/node_modules/*"
-    ]
+  "compilerOptions": {
+    "target": "ES6",
+    "jsx": "react"
+  },
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
