--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.5.1",
     "resize-observer-polyfill": "^1.5.1",
