--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "framer-motion": "^1.2.4",
     "husky": "^2.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
@@ -27,11 +28,9 @@
     "react": "^16.8.6",
     "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
-    "react-pose": "^4.0.8",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
-    "react-spring": "^8.0.27",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.5.1",
     "resize-observer-polyfill": "^1.5.1",
