--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^16.8.6",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0",
+    "react-mde": "^7.6.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
