--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "build:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css",
     "watch:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css -w",
     "start-dev-react": "npm run update-utils && (npm run watch:css & react-scripts start)",
-    "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js"
+    "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js",
+    "start-dev": "npm run start-dev-react & npm run start-dev-server"
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
