--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
+    "react-sticky": "^6.0.3",
     "redux": "^4.0.4",
     "redux-starter-kit": "^0.5.1",
     "resize-observer-polyfill": "^1.5.1",
