--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "husky": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.5",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
@@ -42,8 +43,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
-    "tailwindcss": "^1.0.5",
     "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.0.5",
     "typescript": "^3.5.3"
   },
   "scripts": {
