--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,13 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "type": "npm",
+      "script": "start-dev-react",
+      "problemMatcher": [
+        "$eslint-compact"
+      ]
     }
   ]
 }
