--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "framer-motion": "^1.3.0",
     "husky": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
