--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-starter-kit": "^0.6.3",
     "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.1",
-    "toronto-utils": "./packages/toronto-utils"
+    "toronto-utils": "./packages/toronto-utils",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
