--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "jsx": "react",
-    "baseUrl": "./src"
+    "jsx": "react"
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
