--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "framer-motion": "^1.6.2",
     "husky": "^3.0.4",
     "jsonwebtoken": "^8.5.1",
@@ -39,7 +40,8 @@
     "redux-starter-kit": "^0.6.3",
     "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.1",
-    "toronto-utils": "./packages/toronto-utils"
+    "toronto-utils": "./packages/toronto-utils",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
