--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/node": "^7.5.5",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "@tippy.js/react": "^2.2.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.5",
@@ -44,6 +45,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "postcss-cli": "^6.1.3",
     "tailwindcss": "^1.1.2",
