--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux-starter-kit": "^0.7.0",
     "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.2",
+    "selectorator": "^4.0.3",
     "toronto-utils": "./packages/toronto-utils",
     "uuid": "^3.3.3"
   },
