--- a/package.json
+++ b/package.json
@@ -2,14 +2,49 @@
   "name": "toronto-blog",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "npm run build:css && react-scripts build",
+    "build-server": "babel src/server -d dist",
+    "build-utils": "cd packages/toronto-utils && npm run build",
+    "build:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build",
+    "start": "npm run build-server && node dist/server.js",
+    "start-dev": "npm run start-dev-react & npm run start-dev-server",
+    "start-dev-react": "npm run update-utils && (npm run watch:css & react-scripts start)",
+    "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js",
+    "test": "react-scripts test",
+    "update-utils": "npm run build-utils && yarn upgrade ./packages/toronto-utils",
+    "watch:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css -w"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "rm -r ./packages/toronto-utils/lib/ && npm run build-utils"
+    }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "eslintConfig": {
+    "extends": "react-app",
+    "rules": {
+      "no-var": 1,
+      "prefer-const": 1
+    }
+  },
   "dependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@tippy.js/react": "^3.0.0",
+    "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
@@ -28,6 +63,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "postcss-cli": "^6.1.3",
     "react": "^16.10.1",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.10.1",
@@ -42,48 +78,10 @@
     "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.2",
     "selectorator": "^4.0.3",
+    "tailwindcss": "^1.1.2",
     "toronto-utils": "./packages/toronto-utils",
+    "typescript": "^3.6.3",
     "uuid": "^3.3.3"
   },
-  "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "autoprefixer": "^9.6.1",
-    "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.1.2",
-    "typescript": "^3.6.3"
-  },
-  "scripts": {
-    "start": "npm run build-server && node dist/server.js",
-    "build": "npm run build:css && react-scripts build",
-    "build-server": "babel src/server -d dist",
-    "build-utils": "cd packages/toronto-utils && npm run build",
-    "update-utils": "npm run build-utils && yarn upgrade ./packages/toronto-utils",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build",
-    "build:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css",
-    "watch:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css -w",
-    "start-dev-react": "npm run update-utils && (npm run watch:css & react-scripts start)",
-    "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js",
-    "start-dev": "npm run start-dev-react & npm run start-dev-server"
-  },
-  "proxy": "http://localhost:5000/",
-  "eslintConfig": {
-    "extends": "react-app",
-    "rules": {
-      "no-var": 1,
-      "prefer-const": 1
-    }
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "rm -r ./packages/toronto-utils/lib/ && npm run build-utils"
-    }
-  }
+  "proxy": "http://localhost:5000/"
 }
