--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start-dev-react": "npm run update-utils && (npm run watch:css & react-scripts start)",
     "start-dev-server": "nodemon --inspect=9230 --exec babel-node src/server/server.js",
     "test": "react-scripts test",
-    "update-utils": "npm run build-utils && yarn upgrade ./packages/toronto-utils",
+    "update-utils": "npm run build-utils && (cd packages/toronto-utils && rm -rf node_modules && npm install)",
     "watch:css": "postcss src/client/style/tailwind/index.tailwind.css -o src/client/style/tailwind/index.css -w"
   },
   "husky": {
@@ -38,49 +38,49 @@
   "dependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
-    "@babel/node": "^7.6.2",
-    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/node": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/runtime": "^7.6.2",
-    "@tippy.js/react": "^3.1.0",
-    "autoprefixer": "^9.7.1",
-    "axios": "^0.19.0",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/runtime": "^7.7.7",
+    "@reduxjs/toolkit": "^1.2.1",
+    "@tippy.js/react": "^3.1.1",
+    "autoprefixer": "^9.7.3",
+    "axios": "^0.19.1",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "husky": "^3.0.9",
-    "framer-motion": "^1.6.15",
+    "framer-motion": "^1.7.0",
+    "husky": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.5",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.4",
-    "passport": "^0.4.0",
+    "mongoose": "^5.8.6",
+    "node-sass": "^4.13.0",
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "postcss-cli": "^6.1.3",
-    "react": "^16.11.0",
-    "react-cookie": "^4.0.1",
-    "react-dom": "^16.11.0",
-    "react-markdown": "^4.2.2",
-    "react-mde": "^7.6.2",
-    "react-redux": "^7.1.1",
+    "postcss-cli": "^7.1.0",
+    "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
+    "react-mde": "^8.0.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.2",
     "react-sticky": "^6.0.3",
     "redux": "^4.0.5",
-    "redux-starter-kit": "^0.7.0",
     "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.2",
     "selectorator": "^4.0.3",
-    "tailwindcss": "^1.1.3",
+    "tailwindcss": "^1.1.4",
     "toronto-utils": "./packages/toronto-utils",
-    "typescript": "^3.6.3",
+    "typescript": "^3.7.4",
     "uuid": "^3.3.3"
   },
   "proxy": "http://localhost:5000/"
