--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.7",
     "@babel/runtime": "^7.7.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@reduxjs/toolkit": "^1.2.1",
     "@tippy.js/react": "^3.1.1",
+    "@types/react-fontawesome": "^1.6.4",
     "autoprefixer": "^9.7.3",
     "axios": "^0.19.1",
     "bcrypt": "^3.0.6",
