--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-scripts": "^3.1.2",
     "react-sticky": "^6.0.3",
     "redux": "^4.0.5",
+    "redux-phoenix": "^1.3.0",
     "resize-observer-polyfill": "^1.5.1",
     "secure-random": "^1.1.2",
     "selectorator": "^4.0.3",
