--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "dev": "lerna run dev --stream"
+  },
   "devDependencies": {
     "lerna": "^3.20.2"
   }
