--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,11 +16,12 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "PORT=5001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5002",
   "eslintConfig": {
     "extends": "react-app"
   },
