--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "lerna run dev --stream"
+    "dev": "lerna run dev --stream",
+    "start": "node packages/server/build/server.js",
+    "build": "lerna run build"
   },
   "devDependencies": {
     "lerna": "^3.20.2"
