--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/server.ts",
-    "start": "ts-node dist/server.js",
+    "start": "ts-node build/server.js",
     "build": "tsc -p ."
   },
   "author": "",
