--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@toronto-blog/utils": "0.1.0",
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.8",
     "express": "^4.17.1",
