--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "build:styles": "postcss src/style/tailwind/index.tailwind.css -o src/style/tailwind/index.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@fullhuman/postcss-purgecss": "^2.0.4",
@@ -28,6 +29,7 @@
     "@types/react-redux": "^7.1.6",
     "autoprefixer": "^9.7.4",
     "axios": "^0.19.1",
+    "faker": "^4.1.0",
     "framer-motion": "^1.7.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -44,6 +46,7 @@
     "redux": "^4.0.5",
     "redux-phoenix": "^1.3.0",
     "resize-observer-polyfill": "^1.5.1",
+    "selectorator": "^4.0.3",
     "tailwindcss": "^1.1.4",
     "typescript": "~3.7.2"
   },
