--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p ."
   },
   "dependencies": {
-    "lodash": "~4.17.5"
+    "lodash": "~4.17.5",
+    "secure-random": "^1.1.2"
   }
 }
