--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,8 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "@toronto-blog/utils": "0.1.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.8",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
