--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.6",
+    "@types/react-router-dom": "^5.1.3",
     "autoprefixer": "^9.7.4",
     "axios": "^0.19.1",
     "faker": "^4.1.0",
