--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^3.4.6",
     "autoprefixer": "^9.7.4",
     "axios": "^0.19.1",
     "faker": "^4.1.0",
