--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@tippy.js/react": "^3.1.1",
     "@toronto-blog/utils": "0.1.0",
+    "@types/faker": "^4.1.9",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
