--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,10 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "@toronto-blog/utils": "0.1.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/mongoose": "^5.5.43",
     "@types/node": "^13.1.8",
+    "@types/passport": "^1.0.2",
     "bcrypt": "^3.0.7",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
