--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,8 @@
     "@types/mongoose": "^5.5.43",
     "@types/node": "^13.1.8",
     "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "bcrypt": "^3.0.7",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
