--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,23 +12,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: install
-        run: yarn install
+      # - name: install
+      #   run: yarn install
 
-      - name: build
-        run: yarn build
+      # - name: build
+      #   run: yarn build
 
-      - name: start
-        run: yarn start &
+      # - name: start
+      #   run: yarn start &
+      #   env:
+      #     NODE_ENV: production
+      #     JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
+      #     MONGO_CS: ${{ secrets.MONGO_CS }}
+      #     SECRET: ${{ secrets.SECRET }}
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v1
+        with:
+          build: yarn build
+          start: yarn start
+          # wait-on: 'http://localhost:5002'
         env:
           NODE_ENV: production
           JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
           MONGO_CS: ${{ secrets.MONGO_CS }}
           SECRET: ${{ secrets.SECRET }}
-
-      - name: Cypress run
-        uses: cypress-io/github-action@v1
-        with:
-          # start: npm start
-          # quote the url to be safe against YML parsing surprises
-          wait-on: 'http://localhost:5002'
