--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v1
         with:
+          install: yarn
           build: yarn build
           start: yarn start
           # wait-on: 'http://localhost:5002'
