--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,8 +7,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: install
-        run: yarn
+      # - name: install
+      #   run: yarn
 
       - name: Cypress run
         uses: cypress-io/github-action@v1
