--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start:prod": "NODE_ENV=production node packages/server/build/server.js",
     "build": "lerna run build",
     "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "test:ci": "yarn start-server-and-test start 5002 cy:run"
   },
   "dependencies": {
     "cypress": "^4.0.0",
-    "lerna": "^3.20.2"
+    "lerna": "^3.20.2",
+    "start-server-and-test": "^1.10.8"
   }
 }
