--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,27 +7,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Install Packages
-        run: yarn
-      - name: Build
-        run: yarn build
-      - name: Run Cypress
-        run: yarn test:ci
-        env:
-          NODE_ENV: production
-          JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
-          MONGO_CS: ${{ secrets.MONGO_CS }}
-          SECRET: ${{ secrets.SECRET }}
-      # - name: install
+      # - name: Install Packages
       #   run: yarn
-      # - name: Cypress run
-      #   uses: cypress-io/github-action@v1
-      #   with:
-      #     build: yarn run build
-      #     start: yarn run start
-      #     wait-on: http://localhost:5002
+      # - name: Build
+      #   run: yarn build
+      # - name: Run Cypress
+      #   run: yarn test:ci
       #   env:
       #     NODE_ENV: production
       #     JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
       #     MONGO_CS: ${{ secrets.MONGO_CS }}
       #     SECRET: ${{ secrets.SECRET }}
+      - name: Cypress run
+        uses: cypress-io/github-action@v1
+        with:
+          build: yarn run build
+          start: yarn run start
+          wait-on: http://localhost:5002
+        env:
+          NODE_ENV: testing
+          JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
+          MONGO_CS: ${{ secrets.MONGO_CS }}
+          SECRET: ${{ secrets.SECRET }}
