--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,3 +18,13 @@ jobs:
           MONGO_CS: ${{ secrets.MONGO_CS }}
           SECRET: ${{ secrets.SECRET }}
           PORT: '5001'
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
